# LIDAR-VISION

./: README.md
door_detection/: CMakeLists.txt  package.xml
door_detection/launch/: rviz.launch  test_edge_detection.launch
door_detection/rviz/: edge_detection.rviz
door_detection/src/: edge_detection_node.cpp
door_detection/urdf/: lidar.urdf.xacro
door_detection/worlds/: my_world.world
launch/: simulation.launch  spawn.launch
src/: pcd_publisher.cpp
urdf/: my_robot.urdf
